# inventory-platform-rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  seed_data.sql
apps/backend/: .dockerignore  Dockerfile  pyproject.toml
apps/backend/catalog/: models.py  serializers.py  urls.py  views.py
apps/backend/catalog/migrations/: 0001_initial.py
apps/backend/config/: settings.py  urls.py
apps/backend/docker/: entrypoint.sh
apps/backend/stock/: models.py  serializers.py  services.py  urls.py  views.py
apps/backend/stock/migrations/: 0001_initial.py
apps/backend/warehouse/: models.py  serializers.py  urls.py  views.py
apps/backend/warehouse/migrations/: 0001_initial.py
apps/rag/: Dockerfile  app.py  ingest_kb.py  pyproject.toml
apps/rag/docker/: entrypoint.sh
apps/rag/knowledge/: sops-inventario.md
apps/rag/rag/: cache.py  config.py  db.py  intent.py
apps/rag/utils/: make_embeddings.py
